Web Inspector: Occasional ASSERT closing web inspector https://bugs.webkit.org/show_bug.cgi?id=136762

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-09-11
Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

It is harmless, and indeed possible to have an empty set of listeners
now that each Page gets its own PageDebugServer instead of a shared
global. So we should replace the null checks with isEmpty checks.
Since nobody was ever returning null, convert to references as well.

* inspector/JSGlobalObjectScriptDebugServer.h:
* inspector/ScriptDebugServer.cpp:
(Inspector::ScriptDebugServer::dispatchBreakpointActionLog):
(Inspector::ScriptDebugServer::dispatchBreakpointActionSound):
(Inspector::ScriptDebugServer::dispatchBreakpointActionProbe):
(Inspector::ScriptDebugServer::sourceParsed):
(Inspector::ScriptDebugServer::dispatchFunctionToListeners):
(Inspector::ScriptDebugServer::notifyDoneProcessingDebuggerEvents):
(Inspector::ScriptDebugServer::handlePause):
(Inspector::ScriptDebugServer::needPauseHandling): Deleted.
* inspector/ScriptDebugServer.h:

Source/WebCore:

* bindings/js/WorkerScriptDebugServer.h:
* inspector/PageScriptDebugServer.h:

Canonical link: https://commits.webkit.org/154589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173551 268f45cc-cd09-0410-ab3c-d52691b4dbfc