Source/WebCore/bindings/js/WorkerScriptDebugServer.h
@@ -53,7 +53,7 @@ public:
     void interruptAndRunTask(PassOwnPtr<ScriptDebugServer::Task>);
 
 private:
-    virtual ListenerSet* getListenersForGlobalObject(JSC::JSGlobalObject*) override { return &m_listeners; }
+    virtual ListenerSet& getListeners() override { return m_listeners; }
     virtual void didPause(JSC::JSGlobalObject*) override { }
     virtual void didContinue(JSC::JSGlobalObject*) override { }
     virtual void runEventLoopWhilePaused() override;
